update specs
